# mimedb

./: README.md  pyproject.toml
examples/: dump_db.py  get_equivalent_types.py  get_types_for_extension.py  show_ext_with_multiple_mimetypes.py
src/mimedb/: __init__.py  api.py  cache.py  core.py  csv_parser.py  file_parser.py  hdf5_parser.py  json_parser.py  parquet_parser.py  schema_types.py
src/mimedb/sources/: apache_types.py  galaxy_types.py  iana_types.py  pronom_types.py
